--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,6 +11,8 @@ on:
     branches: [ "main" ]
   schedule:
        - cron: "0 18 * * 0"  
+  check_run:
+    types: [created]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -30,6 +32,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
+        
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
